--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/universal_backend.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "50mb"
-      }
+      "src": "backend/api/index.py",
+      "use": "@vercel/python"
     },
     {
       "src": "frontend/package.json",
@@ -19,19 +16,11 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/backend/universal_backend.py"
+      "dest": "/backend/api/index.py"
     },
     {
       "src": "/(.*)",
       "dest": "/frontend/$1"
     }
-  ],
-  "env": {
-    "PYTHONPATH": "/var/task/backend"
-  },
-  "functions": {
-    "backend/universal_backend.py": {
-      "runtime": "python3.9"
-    }
-  }
+  ]
 }
