--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,10 @@
-# Backend Dependencies
 fastapi==0.104.1
 uvicorn==0.24.0
 websockets==12.0
 pydantic==2.5.0
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-pymongo==4.6.0
-redis==5.0.1
-
-# System monitoring
 psutil>=5.9.0
-
-# Utilities
-python-dotenv==1.0.0
-requests==2.31.0
-aiofiles==23.2.1
-python-multipart==0.0.6
+python-dotenv>=1.0.0
+aiofiles>=23.2.1
+requests>=2.31.0
+numpy>=1.24.0
+opencv-python>=4.8.0
